user-service/k8s/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 3306
      # Port to forward to inside the pod
      targetPort: 3306
  selector:
    app: mysql
