user-service/k8s/user-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 8081
      # Port to forward to inside the pod
      targetPort: 8081
      # Port accessible outside cluster
      nodePort: 30001
  selector:
    app: user-service
  type: LoadBalancer
