user-service/k8s/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /user-service/*
        backend:
          serviceName: user-service
          servicePort: 8081
      - path: /user-management-service/*
        backend:
          serviceName: user-management-service
          servicePort: 8082
      - path: /web-sample/*
        backend:
          serviceName: web
          servicePort: 8080
